# Robocon_2021

./: README.md
Assets/: Robocon_Arrow.dae  Robocon_Arrow.step
Final_assembly_robocon/: CMakeLists.txt  package.xml
Final_assembly_robocon/launch/: display.launch  gazebo.launch
Final_assembly_robocon/meshes/: back_left.STL  back_right.STL  base_link.STL  front_left.STL  front_right.STL
Final_assembly_robocon/urdf/: Final_assembly_robocon.csv  Final_assembly_robocon.urdf
Final_assembly_robocon1/: CMakeLists.txt  package.xml
Final_assembly_robocon1/launch/: display.launch  gazebo.launch
Final_assembly_robocon1/meshes/: back_left.STL  back_right.STL  base_link.STL  front_left.STL  front_right.STL
Final_assembly_robocon1/urdf/: Final_assembly_robocon1.csv  Final_assembly_robocon1.urdf
crn_robot_description/launch/: display.launch  gazebo.launch
defense_bot_navigation/: CMakeLists.txt  package.xml
dr_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit_pkg_DR/: .setup_assistant  CMakeLists.txt  package.xml
moveit_pkg_TR/: .setup_assistant  CMakeLists.txt  package.xml
robocon2020/: CMakeLists.txt  package.xml
src/pass Robot base chassis only/: CMakeLists.txt  package.xml
src/pass Robot base chassis only/launch/: display.launch  gazebo.launch
src/pass Robot base chassis only/urdf/: pass Robot base chassis only.csv  pass Robot base chassis only.urdf
throwing_bot_description/: CMakeLists.txt  package.xml
throwing_bot_navigation/: CMakeLists.txt  package.xml
tr_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+214 files in other folders)
